# pico4k

./: .gitmodules  CMakeLists.txt  PICOPACK.md  README.md  flash.sh
cmake/: cxx_compile_options.cmake  find_sdk.cmake  fix_clangd_includes.cmake
embed/: CMakeLists.txt  embed.cmake  embed.cpp.in  embed.hpp.in
picopack/: CMakeLists.txt
picopack/boot2/: CMakeLists.txt
picopack/boot2/include/picopack/: assert.S  boot2.h
picopack/boot2/src/: copy2ram.S  exo2ram.S  upkr2ram.S
picopack/link/: CMakeLists.txt  final.ld  part.ld
picopack/part/: CMakeLists.txt  embed_part.py  part_copy2ram.py  part_exo2ram.py  part_upkr2ram.py
picopack/part/src/: vectors.S
proj/: CMakeLists.txt
proj/include/: dma_channels.h  effect_audio.h  effect_text.h  effect_twister.h  font1bpp.h  font_config.h  interp_config.h  irq_config.h  memmove.h  pwm_config.h  vga_config.h  vga_pins.h  vga_timing_irq.h
proj/src/: main.cpp  vga_pixels.pio  vga_timing.pio  vga_timing_irq.cpp
tools/: CMakeLists.txt
tools/exomizer/: CMakeLists.txt  README.md  exo_helper.c
usdk/: CMakeLists.txt
usdk/include/usdk/: clock_dividers.h  dma.h  gpio.h  interp.h  irq.h  multicore.h  pio.h  pwm.h  runtime.h
usdk/include/usdk/util/: array.h  iovec.h  mask.h  mem.h
usdk/pioasm/: cpp_sdk_output.cpp
usdk/src/: no_exit.cpp  no_libc_io.cpp
